@@ -12,6 +12,10 @@ Here is a history of user visible changes to Mailman.
 ========================
 (201X-XX-XX)
 
+Bugs fixed
+----------
+ * Typo in scan_message() (LP: #645897)
+
 
 3.0 alpha 6 -- "Cut to the Chase"
 =================================
